--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" style="color-scheme: light; --liff-base-background-color:#FFFFFF; --liff-base-text-color:#000000; --liff-base-background-rgb-color:255, 255, 255; --liff-base-text-rgb-color:0, 0, 0; --liff-light-button-border-color:rgba(0, 0, 0, 0.15); --liff-title-text-color:#111111; --liff-title-background-color:#FFFFFF; --liff-title-button-color:#111111; --liff-icon-color:#111111; --liff-status-bar-color:black; --liff-title-subtext-color:#B7B7B7; --liff-progress-bar-color:#06C755; --liff-progress-background-color:#FFFFFF; --liff-title-button-area-background-color:rgba(255, 255, 255, 0.12); --liff-title-button-area-border-color:rgba(0, 0, 0, 0.15);"><head>
   
   <meta charset="UTF-8">
@@ -18,7 +18,7 @@
 
 
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('https://img5.pic.in.th/file/secure-sv1/Untitled-5_0.jpeg');
+        background-image: url('https://img2.pic.in.th/pic/logo_0.jpg');
         /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
         background-repeat: no-repeat;
         background-size: cover;
@@ -29,11 +29,11 @@
     <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-6">
       <div class="card" style="background: rgb(0 0 0 / 60%);margin-top: 0px;border: 0px;border-radius: 15px;">
         <div class="card-body p-3 p-sm-4">
-          <!--img src="https://img2.pic.in.th/pic/freenew2__0.jpeg" class="img-fluid" style="width: 50%;"-->
+          <!--img src="https://img5.pic.in.th/file/secure-sv1/freenew__0.jpg" class="img-fluid" style="width: 50%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
-          <img src="https://img2.pic.in.th/pic/freenew2__0.jpeg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+          <img src="https://img5.pic.in.th/file/secure-sv1/freenew__0.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
-          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 15px;font-weight: 500;">กดปุ่มแชร์ด้านล่างแชร์]ลงกลุ่มไลน์ 5 แชร์ หรือแชร์ให้เพื่อน 7 คนทำกิจกรรมเสร็จแคปหลักฐานการทำกิจกรรมส่งด้วยนะคะ</p>
+          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 15px;font-weight: 500;">กดปุ่มแชร์ด้านล่างแชร์]ลงกลุ่มไลน์ 5 แชร์ หรือแชร์ให้เพื่อน 10 คนทำกิจกรรมเสร็จแคปหลักฐานการทำกิจกรรมส่งด้วยนะคะ</p>
           <div class="d-grid gap-2 col-10 mx-auto">
             <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">เเชร์กิจกรรม</button>
           </div>
@@ -52,7 +52,7 @@
     async function sendShare() {
       const result = await liff.shareTargetPicker([{
         "type": "flex",
-        "altText": ".คุณพี่ ได้รับเครดิตฟรี 20 จากทางเรานะคะ ไม่ต้องฝากก่อน !! รับทันที ก่อนสิทธิ์นี้จะหมด ",
+        "altText": ".เเจ้ง: User รับเงินฟรี 50 บาท มีสิทธิ์รับเฉพาะผู้ที่ ได้รับข้อความนี้เท่านั้น ",
     "type": "flex",
     "contents": {
       "type": "carousel",
@@ -69,15 +69,15 @@
             "contents": [
               {
                 "type": "image",
-                "url": "https://img2.pic.in.th/pic/freenew2__0.jpeg",
+                "url": "https://img5.pic.in.th/file/secure-sv1/freenew__0.jpg",
                 "size": "full",
                 "aspectMode": "cover",
-                "aspectRatio": "33:33",
+                "aspectRatio": "41:43",
                 "gravity": "center",
                 "action": {
                   "type": "uri",
                   "label": "action",
-                  "uri": "https://lin.ee/EbUXLYP"
+                  "uri": "https://lin.ee/cWqACSK"
                 },
                 "flex": 1
               }
@@ -85,7 +85,7 @@
             "action": {
               "type": "uri",
               "label": "action",
-              "uri": "https://lin.ee/EbUXLYP"
+              "uri": "https://lin.ee/cWqACSK"
             }
           },
           {
@@ -105,7 +105,7 @@
                       "label": "action",
                       "uri": "https://landing.ak477online.com/login"
                     },
-                    "url": "https://img5.pic.in.th/file/secure-sv1/Untitled-5_0.jpeg"
+                    "url": "https://img2.pic.in.th/pic/logo_0.jpg"
                   }
                 ],
                 "cornerRadius": "100px",
@@ -130,9 +130,9 @@
                       },
                       {
                         "type": "span",
-                        "text": "กลับมาอีกครั้งการแจกครั้งใหญ่ แจกทุกยูสเซอร์ 20.00 เครดิต !! ไม่หลอก ไม่จกตา แจกจริงแน่นอน",
+                        "text": "🖱️ แค่คลิกเดียว! รับฟรีทันที 50 บ. รับง่ายๆ เราแจกทุกยูส แจกไม่อั้น เล่นง่ายจ่ายชัวร์ วันนี้เท่านั้น ‼",
                         "size": "md",
-                        "color": "#FFCC00"
+                        "color": "#FFD700"
                       }
                     ],
                     "size": "md",
@@ -140,15 +140,14 @@
                     "action": {
                       "type": "uri",
                       "label": "action",
-                      "uri": "https://lin.ee/EbUXLYP"
+                      "uri": "https://lin.ee/cWqACSK"
                     }
                   }
                 ],
                 "backgroundColor": "#000000",
                 "offsetTop": "sm",
                 "offsetStart": "xs",
-                "margin": "lg",
-                "paddingTop": "sm"
+                "margin": "lg"
               }
             ],
             "spacing": "xl",
@@ -172,7 +171,7 @@
             "type": "button",
             "action": {
               "type": "uri",
-              "uri": "https://lin.ee/EbUXLYP",
+              "uri": "https://lin.ee/cWqACSK",
               "label": "รับเครดิตฟรี"
             },
             "color": "#FFFFFF",
@@ -187,8 +186,8 @@
               "uri": "https://landing.ak477online.com/register"
             },
             "height": "sm",
-            "style": "primary",
-            "color": "#330099"
+            "style": "secondary",
+            "color": "#FFFF00"
           }
         ],
         "backgroundColor": "#000000",
@@ -220,7 +219,7 @@
     }
     async function main() {
       await liff.init({
-        liffId: "2004281487-LgBJGPYv"
+        liffId: "2005443016-nXbDmv41"
       })
       if (!liff.isLoggedIn()) {
         liff.login()
